Fix commission members size on small devices

--- a/app/styles/elements/lancie-commission-members.scss
+++ b/app/styles/elements/lancie-commission-members.scss
@@ -5,6 +5,11 @@
 
   #info {
     width: calc(50% - 16px);
+
+    &.phone {
+      width: 100%;
+    }
+
     margin: 0 8px 16px 8px;
 
     position: relative;
